# fornexpress

./: .gitignore  alembic.ini  criar_tabelas.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 14817eb1439c_modelo_usuario_pronto.py  88b0028d2f7c_modelo_usuario_pronto.py
api/v1/: api.py
api/v1/routes/: usuario.py
core/: configs.py  database.py
models/: __all_models.py  usuario_model.py
schemas/: usuario_schema.py
utils/: custom_pagination.py
